fix contacts/icons alignment

--- a/style.css
+++ b/style.css
@@ -110,26 +110,39 @@ hr{
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    gap: 0.8rem;
 }
 
 .iconLinks img{
     filter: invert();
     width: 3rem;
-    margin: 0 .2rem;
+    margin: 0;
+    vertical-align: middle;
+}
+
+.iconLinks a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #emailButton{
-    all: none;
+    all: unset;
     background-color: transparent;
     border: none;
-    padding: none;
-    margin-right: -0.3rem;
+    padding: 0;
+    margin: 0;
     font-family: "Source Code Pro";
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #emailIcon{
     width: 3rem;
+    margin: 0;
 }
 
 #githubIcon{
@@ -137,7 +150,9 @@ hr{
     margin: 0;
 }
 
-
+#linkedinIcon, #instagramIcon {
+    margin: 0;
+}
 
 #name, #portfolioHeader{
     margin: 0;
@@ -325,20 +340,42 @@ hr{
     height: fit-content;
     transform-style: preserve-3d;
     align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
 }
 
 #fourInfo{
     margin-top: 1rem;
-    width: min(70vw, 450px);
+    width: min(90vw, 500px);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: repeat(2, 1fr);
     row-gap: 1rem;
+    column-gap: 0.5rem;
     text-align: center;
+    justify-content: center;
+}
+
+/* Media query for extra wide screens */
+@media only screen and (min-width: 900px) {
+    #fourInfo {
+        grid-template-columns: repeat(4, 1fr);
+        width: min(90vw, 1000px);
+    }
+}
+
+/* Media query for smaller screens */
+@media only screen and (max-width: 480px) {
+    #fourInfo {
+        grid-template-columns: 1fr;
+        width: min(90vw, 300px);
+    }
 }
 
 .line, .line1{
-    margin-left: 2.5rem;
+    margin-left: 0;
     height: 6rem;
     display: flex;
     flex-direction: row;
@@ -347,6 +384,20 @@ hr{
     text-decoration: none;
     color: black;
     cursor: pointer;
+}
+
+@media only screen and (min-width: 900px) {
+    .line, .line1 {
+        justify-content: center;
+    }
+    
+    .contact {
+        align-items: center;
+    }
+    
+    .contactName {
+        text-align: center;
+    }
 }
 
 .line p{
@@ -358,23 +409,28 @@ hr{
     flex-direction: column;
     justify-content: start;
     align-items: flex-start;
+    width: 100%;
 }
 
 .contactType{
     font-size: 1.5rem;
-    margin: 1rem;
+    margin: 1rem 0;
 }
 
 .line img{
     height: 80%;
+    margin-right: 1rem;
 }
 
 .sectionFour button{
     background-color: white;
     border: none;
-    padding: none;
-    margin-left: 1.95rem;
+    padding: 0;
+    margin-left: 0;
     font-family: "Source Code Pro";
+    display: flex;
+    align-items: center;
+    width: 100%;
 }
 
 .contactName{
